Fix out of bound text issue

--- a/styles.css
+++ b/styles.css
@@ -389,12 +389,18 @@ footer {
   margin-bottom: 3em;
 }
 
-.contact-content p:last-of-type {
+.contact-content p {
+  font-size: 20px;
   margin-bottom: 1em;
 }
 
 .contact-content a {
   color: #FFFFFF;
+  opacity: 0.7;
+}
+
+.contact-content a:hover {
+  opacity: 1;
 }
 
 @media only screen and (min-width: 650px) {
